--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+gradle/wrapper/gradle-*.zip
 
 # IDE
 .idea/
@@ -44,3 +45,4 @@ frontend/.flutter-plugins-dependencies
 frontend/.packages
 frontend/build/
 frontend/pubspec.lock
+*.zip
