Fix deployment issues, update ports, and stabilize environment
- Update service ports to 4080-4084 in Terraform, Docker, and documentation
- Configure API Gateway to use direct Cloud Run URLs instead of Eureka (fixing 503 error)
- Grant 'allUsers' invoke permission on Cloud Run backend services (fixing 403 error)
- Update setupGCP.sh to pass SERVER_PORT build arguments and force push images
- Add validate_local.sh and validate_remote.sh for environment verification
- Update UI tests configuration to match new ports
- Remove 'widget_test.dart' and update .gitignore
- Ensure backend unit tests pass

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,13 @@ spring-boot-application.log
 # Docker
 postgres_data/
 
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+
+
 # Flutter
 frontend/.dart_tool/
 frontend/.flutter-plugins
