--- a/ai-service/src/main/resources/application.properties
+++ b/ai-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ai-service
-server.port=8084
+server.port=${SERVER_PORT}
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
