--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-gateway
-server.port=8080
+server.port=${SERVER_PORT}
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
@@ -7,19 +7,19 @@ eureka.instance.prefer-ip-address=true
 
 # Gateway Routes
 spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=lb://auth-service
+spring.cloud.gateway.routes[0].uri=${AUTH_SERVICE_URL:lb://auth-service}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/auth/**
 
 spring.cloud.gateway.routes[1].id=content-service
-spring.cloud.gateway.routes[1].uri=lb://content-service
+spring.cloud.gateway.routes[1].uri=${CONTENT_SERVICE_URL:lb://content-service}
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/content/**
 
 spring.cloud.gateway.routes[2].id=playback-service
-spring.cloud.gateway.routes[2].uri=lb://playback-service
+spring.cloud.gateway.routes[2].uri=${PLAYBACK_SERVICE_URL:lb://playback-service}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/playback/**
 
 spring.cloud.gateway.routes[3].id=ai-service
-spring.cloud.gateway.routes[3].uri=lb://ai-service
+spring.cloud.gateway.routes[3].uri=${AI_SERVICE_URL:lb://ai-service}
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/ai/**
 
 # CORS Configuration
