--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=eureka-service
-server.port=8761
+server.port=${SERVER_PORT}
 
 # Eureka Server Configuration
 eureka.client.register-with-eureka=false
