--- a/frontend/playlizt_app/pubspec.yaml
+++ b/frontend/playlizt_app/pubspec.yaml
@@ -38,6 +38,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   
-  # Add assets here if needed
-  # assets:
-  #   - images/
+  assets:
+    - assets/images/
