--- a/playlizt-ui-tests/src/test/resources/test.properties
+++ b/playlizt-ui-tests/src/test/resources/test.properties
@@ -1,8 +1,8 @@
 # Playlizt UI Test Configuration
 
 # Application URLs
-test.web.url=http://localhost:8080
-test.flutter.url=http://localhost:8090
+test.web.url=http://localhost:4080
+test.flutter.url=http://localhost:4090
 
 # Playwright Configuration
 playwright.headless=false
@@ -10,8 +10,8 @@ playwright.slowmo=50
 playwright.timeout=30000
 
 # Test Data
-test.user.email=test@playlizt.com
-test.user.password=Test123!
+test.user.email=testuser@t3ratech.co.zw
+test.user.password=testpass
 test.user.username=testuser
 
 # Screenshot Configuration
