--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=auth-service
-server.port=8081
+server.port=${SERVER_PORT}
 
 # Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
