--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=content-service
-server.port=8082
+server.port=${SERVER_PORT}
 
 # Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
