--- a/playback-service/Dockerfile
+++ b/playback-service/Dockerfile
@@ -40,6 +40,7 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 # Arguments for user creation
 ARG PLAYLIZT_UID=1000
 ARG PLAYLIZT_GID=1000
+ARG SERVER_PORT
 
 # Create non-root user
 RUN groupadd -r playlizt -g ${PLAYLIZT_GID} && \
@@ -59,11 +60,11 @@ RUN mkdir -p /var/log/playlizt && \
 USER playlizt:playlizt
 
 # Expose port
-EXPOSE 8083
+EXPOSE ${SERVER_PORT}
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:8083/actuator/health || exit 1
+  CMD curl -f http://localhost:${SERVER_PORT}/actuator/health || exit 1
 
 # Run application
 ENTRYPOINT ["java", "-jar", "playback-service.jar"]
