--- a/playback-service/src/main/resources/application.properties
+++ b/playback-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=playback-service
-server.port=8083
+server.port=${SERVER_PORT}
 
 # Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
