Refactor API tests to use centralized config and update documentation
- Create BaseApiTest for shared setup and properties loading
- Refactor all API tests to remove hardcoded credentials
- Update ARCHITECTURE.md and README.md with latest features
- Add REQUIREMENTS.md based on project specifications

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -43,8 +43,8 @@ management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
 
 # Redis Configuration
-spring.data.redis.host=${REDIS_HOST:redis}
-spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 
 # Rate Limiter Configuration
 spring.cloud.gateway.default-filters[0].name=RequestRateLimiter
