feat: Implement offline download and conversion features - Added Download tab with URL input and download queue management - Implemented download manager with pause/resume/cancel functionality - Added settings persistence using shared_preferences - Updated pubspec.yaml with new dependencies (fvp, html, intl, patrol) - Added integration test setup for Flutter - Updated IMPLEMENTATION_PLAN.md to reflect completed tasks

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ frontend/.packages
 frontend/build/
 frontend/pubspec.lock
 *.zip
+
+playlizt-frontend/playlizt_app/integration_test/.download_test_urls.local.txt
